- Fixed bug #49320 (PDO returns null when SQLite connection fails)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@300413 c90b9560-bf6c-de11-be94-00142212c4b1