ext/sqlite/pdo_sqlite2.c
@@ -589,6 +589,7 @@ static int pdo_sqlite2_handle_factory(pdo_dbh_t *dbh, zval *driver_options TSRML
 	efree(filename);
 
 	if (!H->db) {
+		H->einfo.errcode = SQLITE_ERROR;
 		pdo_sqlite2_error(errmsg, dbh);
 		goto cleanup;
 	}
